# restSQL

./: .clang-format  .gitignore  CMakeLists.txt  README.md  restSQL.cpp  restsql.py
cmake/: FindRest.cmake  FindRoot.cmake
inc/: TRestSql.h
restsql/: database.py  rest_utils.py  restsql.py  stdout_redirector.py
src/: TRestSql.cxx
utils/inc/: sha1.h
utils/src/: sha1.cxx
